# ancho

./: .gitignore  .gitmodules  Jakefile  README.md  package.json
IE/: Ancho-IE.sln  CMakeLists.txt  register-test-extension-1.reg  register-test-suite-extension.reg
IE/Ancho/: HtmlPanel.h  HtmlPanelUIHandler.h  HtmlToolbarWindow.cpp  HtmlToolbarWindow.h  Toolbar.cpp  Toolbar.h
IE/AnchoBgSrv/: AnchoAddonService.cpp  AnchoAddonService.h  AnchoAddonService.rgs  AnchoBackground.cpp  AnchoBackground.h  AnchoBackgroundAPI.cpp  AnchoBackgroundAPI.h  AnchoBgSrv.cpp  AnchoBgSrv.idl  AnchoBgSrv.rc  AnchoBgSrv.rgs  AnchoBgSrv.vcproj  AnchoBgSrvModule.cpp  AnchoBgSrvModule.h  AnchoBgSrvPS.vcproj  AnchoBgSrvps.def  BackgroundWindow.cpp  BackgroundWindow.h  CMakeLists.txt  CommandQueue.h  Exceptions.h  HtmlPanel.cpp  HtmlToolbarWindow.cpp  HtmlToolbarWindow.h  IECookie.cpp  IECookie.h  IECookieManager.cpp  IECookieManager.h  LogView.cpp  LogView.h  LogViewRE.cpp  LogViewRE.h  LogWindow.cpp  LogWindow.h  PopupWindow.cpp  PopupWindow.h  Toolbar.h  XmlHttpRequest.cpp  XmlHttpRequest.h  dlldata.c  (+6 more)
IE/AnchoBgSrv/res/js/: Event.js  api.js  bookmarks.js  browserAction.js  browsingData.js  contentSettings.js  contextMenus.js  cookies.js  debugger.js  events.js  extension.js  fileBrowserHandler.js  history.js  i18n.js  idle.js  management.js  omnibox.js  onMessageAPI.js  pageAction.js  pageCapture.js  permissions.js  privacy.js  proxy.js  storage.js  tabs.js  topSites.js  tts.js  ttsEngine.js  utils.js  webNavigation.js  webRequest.js  webstore.js  windows.js
IE/AnchoBgSrv/res/js/specifications/: browserAction_spec.js  cookies_spec.js  extension_spec.js  i18n_spec.js  tabs_spec.js  windows_spec.js
IE/AnchoBgSrv/res/js/utils/: typeChecking.js  utils.js
IE/AnchoBgSrv/res/logwindow/: log.html
IE/AnchoBgSrv/res/toolbars/: browserActionToolbar.html
IE/ancho/: AnchoAddon.cpp  AnchoAddon.h  AnchoAddon.rgs  AnchoBrowserEvents.cpp  AnchoBrowserEvents.h  AnchoPassthruAPP.cpp  AnchoPassthruAPP.h  AnchoRuntime.cpp  AnchoRuntime.h  AnchoRuntime.rgs  AnchoToolbar.rgs  CMakeLists.txt  DOMWindowWrapper.cpp  DOMWindowWrapper.h  HtmlPanelUIHandler.cpp  HtmlToolbarWindow.cpp  HtmlToolbarWindow.h  Toolbar.ipp  ancho.cpp  ancho.def  ancho.idl  ancho.rc  ancho.rgs  ancho.vcproj  anchoPS.vcproj  anchops.def  dlldata.c  dllmain.cpp  dllmain.h  resource.h  stdafx.cpp  stdafx.h
IE/anchocommons/: CMakeLists.txt  anchocommons.h  anchocommons.vcproj  strings.cpp  utilities.cpp
IE/test-extension-1/: background.html  background.js  content.js  manifest.json
IE/test-suite-extension/: ConsoleReporter.js  background.html  content.js  manifest.json  popup.html
IE/test-suite-extension/html/: background.html  popup.html
IE/test-suite-extension/js/: background.js  content.js  popup.js
IE/test-suite-extension/js/lib/jasmine/: jasmine.js
IE/test-suite-extension/js/modules/background/: chromeCookies.js  chromeEvents.js  chromeTabs.js  document.js
IE/test-suite-extension/js/modules/common/: consoleReporter.js
IE/test-suite-extension/js/modules/content/: jquery.js
IE/test-suite-extension/spec/: chromeCookies.js  chromeEvents.js  chromeExtension.js  chromeTabs.js  chromeWindows.js
chrome/html/: background_chrome.html  chrome_wrapper.html
chrome/js/: aji.js  backgroundDispatch.js  chrome_wrapper.js  contentDispatch.js  require.js  salsita.js
firefox/: README.md  bootstrap.js  chrome.manifest  install.rdf  state.js
firefox/js/: api.js  backgroundPrivileged.js  bootstrap.js  browserAction.js  browserEvents.js  clipboard.js  config.js  console.js  cookies.js  debugger.js  event.js  extension.js  external.js  history.js  localStorage.js  scripting.js  state.js  storage.js  tabs.js  toolbar.js  toolbarSingleton.js  utils.js  webRequest.js  webRequestSingleton.js  windowWatcher.js  windows.js
firefox/modules/: API.jsm  BrowserEvents.jsm  Config.jsm  External.jsm  LocalStorageAPI.jsm  Require.jsm  Scripting.jsm  State.jsm  Toolbar.jsm  Utils.jsm
firefox/xul/: background.xul
utils/: parseChromeSpec.py
